--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.6",
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "process": "^0.11.10",
+    "vant": "^2.12.47",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
