--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-logs",
+  "name": "vue2-H5-vant",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.3",
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "process": "^0.11.10",
